--- a/fyj-wzry/src/style.scss
+++ b/fyj-wzry/src/style.scss
@@ -1,7 +1,7 @@
 // reset
 * {
-  box-sizing: border-box;
-  outline: none;
+    box-sizing: border-box;
+    outline: none;
 }
 //基础字体大小
 html {
@@ -12,8 +12,50 @@ body {
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.2em;
-    background: #F1F1F1;
+    background: #f1f1f1;
 }
 a {
     color: #999;
+}
+
+// colors
+$colors: (
+    "primary": #db9e3f,
+    "white": #fff,
+    "light": #f9f9f9,
+    "grey": #999,
+    "dark-1": #343440,
+    "dark": #222,
+    "black": #000,
+);
+// 对象 键值对
+@each $colorKey, $color in $colors {
+    .text-#{$colorKey} {
+        color: $color;
+    }
+    .bg-#{colorKet} {
+        background-color: $color;
+    }
+}
+
+// text  数组
+@each $var in (left, center, right) {
+    .text-#{$var} {
+        text-align: $var;
+    }
+}
+
+// font size
+$base-font-size: 1rem;
+$font-sizes: (
+    xs: 0.769231,
+    sm: 0.923077,
+    md: 1,
+    lg: 1.0769,
+    xl: 1.2308
+);
+@each $sizeKey, $size in $font-sizes {
+    .fs-#{$sizeKey} {
+        font-size: $size - $base-font-size;
+    }
 }
