scss 没有起效果

--- a/fyj-wzry/src/style.scss
+++ b/fyj-wzry/src/style.scss
@@ -127,7 +127,7 @@ $spacing-sizes: (
             #{$type}-left:$size*$spacing-base-size;
             #{$type}-right:$size*$spacing-base-size
         }
-        .#{$typeKey}x-#{$sizeKey}{
+        .#{$typeKey}y-#{$sizeKey}{
             #{$type}-top:$size*$spacing-base-size;
             #{$type}-bottom:$size*$spacing-base-size
         }
